objects/Contact_Relationship__c.object
<CustomObject>
    <description>Captures the relationship of a contact with other contacts (Internal or External) or users</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Account in relationship</description>
        <inlineHelpText>Primary Account in relationship</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Public Affairs Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact in the relationship</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dollars_Invested__c</fullName>
        <description>Amount of money an organization invests in another organization</description>
        <inlineHelpText>Amount of money an organization invests in another organization</inlineHelpText>
        <label>Dollars Invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This will be used during migrations to identify the source</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to the Primary Contact or Account</description>
        <inlineHelpText>Account related to the Primary Contact or Account</inlineHelpText>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Relationships (Related Account)</relationshipLabel>
        <relationshipName>Contact_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Relationship_Id__c</fullName>
        <description>Id of the related contact relationship record</description>
        <externalId>true</externalId>
        <label>Related Contact Relationship Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to the Primary Contact</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Relationships (Related Contact)</relationshipLabel>
        <relationshipName>Contact_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record_On_Account__c</fullName>
        <description>Displays the related account or contact record name on the Contact Relationship related list on Account detail page</description>
        <formula>HYPERLINK(
IF( Contact__c != null , &apos;/&apos;+ Contact__c , Related_Account__c ), 

IF( Contact__c != null , Contact__r.FirstName + &apos; &apos; + Contact__r.LastName , Related_Account__r.Name ), 

&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the related account or contact record name on the Contact Relationship related list on Account detail page</inlineHelpText>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <description>Displays the related account, contact or user record name on the Contact Relationship related list on Contact detail page</description>
        <formula>HYPERLINK(
IF( Account__c != null , &apos;/&apos;+ Account__c , IF( Related_Contact__c  != null , &apos;/&apos; + Related_Contact__c, &apos;/&apos; + Related_User__c )), 

IF( Account__c != null , Account__r.Name, IF( Related_Contact__c  != null , Related_Contact__r.FirstName + &apos; &apos; +  Related_Contact__r.LastName, Related_User__r.FirstName + &apos; &apos; + Related_User__r.LastName )), 

&apos;_blank&apos;)</formula>
        <inlineHelpText>Displays the related account, contact or user record name on the Contact Relationship related list on Contact detail page</inlineHelpText>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User related to the Primary Contact</description>
        <label>Related User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Info__c</fullName>
        <description>Description of relationship between contact, user or account</description>
        <label>Relationship Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates if relationship is active or inactive</description>
        <inlineHelpText>Indicates if relationship is active or inactive</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describes type of relationship between two accounts or an acocunt and a contact</description>
        <inlineHelpText>Describes type of relationship between two accounts or an acocunt and a contact</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community Sponsor</fullName>
                </value>
                <value>
                    <fullName>Community Partner</fullName>
                </value>
                <value>
                    <fullName>Grantee</fullName>
                </value>
                <value>
                    <fullName>Membership Association</fullName>
                </value>
                <value>
                    <fullName>Media Outlet</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Chamber Member</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Thought Leader</fullName>
                </value>
                <value>
                    <fullName>Media Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Relationship</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Contact Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <recordTypes>
        <fullName>Account_to_Account</fullName>
        <active>true</active>
        <description>This recordtype is used to create Contact Relationship record of Account to account relationship</description>
        <label>Account to Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_to_Account</fullName>
        <active>true</active>
        <description>This recordtype is used to create Contact Relationship record of Contact to account relationship</description>
        <label>Contact to Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_Contact</fullName>
        <active>true</active>
        <description>This recordtype is used to create Contact Relationship record of Related Contact Type</description>
        <label>Related Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_User</fullName>
        <active>true</active>
        <description>This recordtype is used to create Contact Relationship record of Related User Type</description>
        <label>Related User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>